@@ -23,10 +23,12 @@
 #include <config.h>
 
 #include "av-cp-playlisttreeview.h"
+#include "icons.h"
 #include "av-cp-gui.h"
 #include "av-cp.h"
 
 static GtkWidget *treeview;
+static gboolean   expanded;
 
 gboolean
 on_playlist_treeview_button_release (GtkWidget      *widget,
@@ -55,36 +57,39 @@ create_playlist_treemodel (void)
 
         store = gtk_tree_store_new
                                 (3,
-                                 GDK_TYPE_PIXBUF,    /* Icon                */
-                                 G_TYPE_STRING,      /* Title               */
-                                 G_TYPE_OBJECT,      /* Associated Object 1 */
-                                 G_TYPE_OBJECT);     /* Associated Object 2 */
+                                 GDK_TYPE_PIXBUF,    /* Icon             */
+                                 G_TYPE_STRING,      /* Title            */
+                                 G_TYPE_OBJECT,      /* Primary object   */
+                                 G_TYPE_OBJECT);     /* Secondary object */
 
         return GTK_TREE_MODEL (store);
 }
 
 static void
-setup_treeview_text_columns (GtkWidget *treeview,
-                             char      *headers[])
+setup_treeview_columns (GtkWidget *treeview)
 
 {
         GtkTreeSelection *selection;
-        int i;
+        GtkCellRenderer  *renderers[2];
+        char             *headers[] = { "Icon", "Title"};
+        char             *attribs[] = { "pixbuf", "text"};
+        int               i;
 
         selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (treeview));
         g_assert (selection != NULL);
 
-        for (i = 0; headers[i] != NULL; i++) {
-                GtkCellRenderer   *renderer;
+        renderers[0] = gtk_cell_renderer_pixbuf_new ();
+        renderers[1] = gtk_cell_renderer_text_new ();
+
+        for (i = 0; i < 2; i++) {
                 GtkTreeViewColumn *column;
 
                 column = gtk_tree_view_column_new ();
-                renderer = gtk_cell_renderer_text_new ();
-                gtk_tree_view_column_pack_end (column, renderer, FALSE);
+                gtk_tree_view_column_pack_start (column, renderers[i], FALSE);
                 gtk_tree_view_column_set_title (column, headers[i]);
                 gtk_tree_view_column_add_attribute (column,
-                                                    renderer,
-                                                    "text", i);
+                                                    renderers[i],
+                                                    attribs[i], i);
                 gtk_tree_view_column_set_sizing(column,
                                                 GTK_TREE_VIEW_COLUMN_AUTOSIZE);
 
@@ -101,7 +106,6 @@ setup_playlist_treeview (GladeXML *glade_xml)
 {
         GtkTreeModel      *model;
         GtkTreeSelection  *selection;
-        char              *headers[] = { "Icon", "Title", NULL};
 
         treeview = glade_xml_get_widget (glade_xml, "playlist-treeview");
         g_assert (treeview != NULL);
@@ -112,7 +116,7 @@ setup_playlist_treeview (GladeXML *glade_xml)
         gtk_tree_view_set_model (GTK_TREE_VIEW (treeview), model);
         g_object_unref (model);
 
-        setup_treeview_text_columns (treeview, headers);
+        setup_treeview_columns (treeview);
 
         selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (treeview));
         g_assert (selection != NULL);
@@ -120,13 +124,108 @@ setup_playlist_treeview (GladeXML *glade_xml)
                           "changed",
                           G_CALLBACK (on_item_selected),
                           NULL);
+
+        expanded = FALSE;
+}
+
+static gboolean
+find_media_server (GtkTreeModel *model,
+                   const char   *udn,
+                   GtkTreeIter  *iter)
+{
+        gboolean found = FALSE;
+        gboolean more = TRUE;
+
+        if (udn == NULL)
+                return found;
+
+        more = gtk_tree_model_iter_children (model, iter, NULL);
+
+        while (more && !found) {
+                GUPnPDeviceInfo *info;
+
+                gtk_tree_model_get (model, iter,
+                                    2, &info, -1);
+
+                if (info) {
+                        if (IS_MEDIA_SERVER_PROXY (info)) {
+                                const char *device_udn;
+
+                                device_udn = gupnp_device_info_get_udn (info);
+
+                                if (device_udn &&
+                                    strcmp (device_udn, udn) == 0)
+                                        found = TRUE;
+                        }
+
+                        g_object_unref (info);
+                }
+
+                more = gtk_tree_model_iter_next (model, iter);
+        }
+
+        return found;
+}
+
+static void
+append_media_server (MediaServerProxy *server,
+                     GtkTreeModel     *model,
+                     GtkTreeIter      *parent_iter)
+{
+        GUPnPDeviceInfo *info;
+        char            *friendly_name;
+
+        info = GUPNP_DEVICE_INFO (server);
+
+        friendly_name = gupnp_device_info_get_friendly_name (info);
+        if (friendly_name) {
+                GtkTreeIter device_iter;
+                GList      *child;
+
+                gtk_tree_store_insert_with_values
+                                (GTK_TREE_STORE (model),
+                                 &device_iter, parent_iter, -1,
+                                 0, get_icon_by_id (ICON_DEVICE),
+                                 1, friendly_name,
+                                 2, info,
+                                 -1);
+                g_free (friendly_name);
+
+                /* Append the embedded devices */
+                child = gupnp_device_info_list_devices (info);
+                while (child) {
+                        append_media_server (MEDIA_SERVER_PROXY (child->data),
+                                             model,
+                                             &device_iter);
+                        g_object_unref (child->data);
+                        child = g_list_delete_link (child, child);
+                }
+
+                /*schedule_icon_update (info);*/
+                media_server_proxy_start_browsing (server, "0");
+        }
 }
 
 void
 add_media_server (MediaServerProxy *server)
 {
-        g_object_ref (server);
-        media_server_proxy_start_browsing (server, "0");
+        GtkTreeModel *model;
+        GtkTreeIter   iter;
+        const char   *udn;
+
+        model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+        g_assert (model != NULL);
+
+        udn = gupnp_device_info_get_udn (GUPNP_DEVICE_INFO (server));
+
+        if (!find_media_server (model, udn, &iter)) {
+                append_media_server (server, model, NULL);
+
+                if (!expanded) {
+                        gtk_tree_view_expand_all (GTK_TREE_VIEW (treeview));
+                        expanded = TRUE;
+                }
+        }
 }
 
 void
